--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "discord.js": "^12.5.1",
     "jssoup": "0.0.12",
     "mongoose": "^5.11.7",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {},
   "scripts": {
