Implemented bestbuy.ca parser
* Updated jssoup lib 0.0.12 -> 0.0.15

--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "discord.js": "^12.5.1",
-    "jssoup": "0.0.12",
+    "jssoup": "^0.0.15",
     "mongoose": "^5.11.7",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
