--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "jssoup": "^0.0.15",
     "mongoose": "^5.11.7",
     "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "request-promise": "^4.2.6",
+    "sync-request": "^6.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
