--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "discord.js": "^12.5.1",
+    "dotenv": "^16.0.2",
     "jssoup": "^0.0.15",
     "mongoose": "^5.11.7",
     "request": "^2.88.2",
@@ -12,7 +13,7 @@
     "sync-request": "^6.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
