--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "discord.js": "^12.5.1",
+    "discord.js": "12.5.1",
     "dotenv": "^16.0.2",
     "jssoup": "^0.0.15",
     "mongoose": "^5.11.7",
